--- a/zzmyownsites/myown1.html
+++ b/zzmyownsites/myown1.html
@@ -161,6 +161,7 @@
     <h2>Conclusion</h2>
     <p>Games continue to shape our world, providing endless entertainment and innovation. Whether you are a casual
         player or a hardcore gamer, the future of gaming holds exciting possibilities!</p>
+    <strong>by Vik</strong>
 </body>
 
 
