--- a/zzmyownsites/qalbmoviereview.html
+++ b/zzmyownsites/qalbmoviereview.html
@@ -218,6 +218,16 @@
     <div id="linkdiv"><a href="https://t.me/coolsavings/83"><button id="linkbtn">Movie Link</button></a></div>
     <h2 id="waittext">Link Ready in... <span id="wts">30</span></h2>
 
+    <!--Adsese square ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
+    <!-- display square -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
 </body>
 
 <!--Counter-->
