--- a/zzmyownsites/qalbmoviereview.html
+++ b/zzmyownsites/qalbmoviereview.html
@@ -10,12 +10,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qalb Movie Review</title>
-    <!--Adsense AMP code-->
-    <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
-    </script>
 
     <style>
         * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
             font-family: "Archivo", serif;
         }
 
@@ -115,9 +115,6 @@
 </head>
 
 <body>
-    <!--Adsense AMP adcode-->
-    <amp-auto-ads type="adsense" data-ad-client="ca-pub-2648616140569696">
-    </amp-auto-ads>
 
     <h1>Qalb Movie Review: A Unique Cinematic Experience</h1>
 
@@ -132,11 +129,23 @@
     <p id="loadtext" class="loadtext">Your link is Loading...</p>
     <!--Counter-->
 
+
     <p>Qalb is a film that stands out in the crowded landscape of modern cinema, offering a unique blend of emotional
         depth, cultural richness, and storytelling finesse. Directed by a visionary filmmaker and brought to life by a
         talented cast, Qalb is more than just a movie—it’s an experience that lingers in the hearts and minds of its
         audience long after the credits roll. In this review, we’ll explore what makes Qalb a standout film, delving
         into its narrative, performances, themes, and technical brilliance.</p>
+
+    <!--Square Ad-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
+    <!-- display square -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!--Square Ad-->
 
     <h2>A Story That Resonates</h2>
     <p>At its core, Qalb is a story about love, loss, and the human condition. The film follows the journey of its
@@ -159,6 +168,17 @@
         chemistry between the characters feels genuine, making their relationships believable and compelling. Whether
         it’s the tender moments between Amir and his love interest or the tense interactions with his family, the
         performances are consistently strong, drawing the audience deeper into the story.</p>
+
+    <!--Square Ad-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
+    <!-- display square -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!--Square Ad-->
 
     <h2>Themes That Hit Home</h2>
     <p>One of the most striking aspects of Qalb is its exploration of themes that resonate on a deeply human level. The
@@ -186,6 +206,17 @@
         sound—from the bustling streets of the city to the quiet moments of introspection—adding to the film’s immersive
         quality.</p>
 
+    <!--Square Ad-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
+    <!-- display square -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!--Square Ad-->
+
     <h2>Cultural Richness</h2>
     <p>One of the most refreshing aspects of Qalb is its celebration of Middle Eastern culture. The film offers a
         glimpse into the traditions, customs, and daily life of the region, presenting them in a way that is both
@@ -204,6 +235,17 @@
         provoke thought. It’s a film that speaks to the heart, both literally and metaphorically, and one that deserves
         to be seen by as wide an audience as possible.</p>
 
+    <!--Square Ad-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
+    <!-- display square -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <!--Square Ad-->
+
     <h2>Final Thoughts</h2>
     <p>Qalb is a rare gem in the world of cinema—a film that is as emotionally resonant as it is visually stunning. With
         its compelling narrative, outstanding performances, and thoughtful exploration of universal themes, it’s a movie
@@ -218,7 +260,7 @@
     <div id="linkdiv"><a href="https://t.me/coolsavings/83"><button id="linkbtn">Movie Link</button></a></div>
     <h2 id="waittext">Link Ready in... <span id="wts">30</span></h2>
 
-    <!--Adsese square ads-->
+    <!--Square Ad-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
         crossorigin="anonymous"></script>
     <!-- display square -->
@@ -227,6 +269,7 @@
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    <!--Square Ad-->
 
 </body>
 
