--- a/zzmyownsites/qalbmoviereview.html
+++ b/zzmyownsites/qalbmoviereview.html
@@ -24,7 +24,6 @@
             color: white;
             display: flex;
             flex-direction: column;
-            align-items: center;
 
             h1,
             h2 {
@@ -34,6 +33,7 @@
         }
 
         p {
+            margin: 0 5% 0 5%;
             width: 90%;
             color: #ccc;
         }
@@ -42,6 +42,8 @@
             position: relative;
             width: 150px;
             height: 150px;
+            display: flex;
+            justify-self: center;
         }
 
         .progress-circle {
@@ -87,7 +89,6 @@
             color: red;
         }
 
-
         #linkdiv {
             width: 100%;
             display: flex;
@@ -116,8 +117,6 @@
 
 <body>
 
-    <h1>Qalb Movie Review: A Unique Cinematic Experience</h1>
-
     <!--Counter-->
     <div id="Counter">
         <div class="container">
@@ -129,6 +128,7 @@
     <p id="loadtext" class="loadtext">Your link is Loading...</p>
     <!--Counter-->
 
+    <h1>Qalb Movie Review: A Unique Cinematic Experience</h1>
 
     <p>Qalb is a film that stands out in the crowded landscape of modern cinema, offering a unique blend of emotional
         depth, cultural richness, and storytelling finesse. Directed by a visionary filmmaker and brought to life by a
@@ -136,16 +136,19 @@
         audience long after the credits roll. In this review, we’ll explore what makes Qalb a standout film, delving
         into its narrative, performances, themes, and technical brilliance.</p>
 
-    <!--Square Ad-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-        crossorigin="anonymous"></script>
-    <!-- display square -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <!--Square Ad-->
+    <div>
+        <!--Square Ad-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--Square Ad-->
+    </div>
 
     <h2>A Story That Resonates</h2>
     <p>At its core, Qalb is a story about love, loss, and the human condition. The film follows the journey of its
@@ -169,16 +172,19 @@
         it’s the tender moments between Amir and his love interest or the tense interactions with his family, the
         performances are consistently strong, drawing the audience deeper into the story.</p>
 
-    <!--Square Ad-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-        crossorigin="anonymous"></script>
-    <!-- display square -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <!--Square Ad-->
+    <div>
+        <!--Square Ad-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--Square Ad-->
+    </div>
 
     <h2>Themes That Hit Home</h2>
     <p>One of the most striking aspects of Qalb is its exploration of themes that resonate on a deeply human level. The
@@ -206,16 +212,19 @@
         sound—from the bustling streets of the city to the quiet moments of introspection—adding to the film’s immersive
         quality.</p>
 
-    <!--Square Ad-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-        crossorigin="anonymous"></script>
-    <!-- display square -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <!--Square Ad-->
+    <div>
+        <!--Square Ad-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--Square Ad-->
+    </div>
 
     <h2>Cultural Richness</h2>
     <p>One of the most refreshing aspects of Qalb is its celebration of Middle Eastern culture. The film offers a
@@ -235,16 +244,19 @@
         provoke thought. It’s a film that speaks to the heart, both literally and metaphorically, and one that deserves
         to be seen by as wide an audience as possible.</p>
 
-    <!--Square Ad-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-        crossorigin="anonymous"></script>
-    <!-- display square -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <!--Square Ad-->
+    <div>
+        <!--Square Ad-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--Square Ad-->
+    </div>
 
     <h2>Final Thoughts</h2>
     <p>Qalb is a rare gem in the world of cinema—a film that is as emotionally resonant as it is visually stunning. With
@@ -256,20 +268,36 @@
         being human. And that, perhaps, is the greatest achievement of this remarkable film.</p>
     <p>So, if you’re looking for a movie that will touch your heart and stay with you long after the credits roll, look
         no further than Qalb. It’s a cinematic journey that’s well worth taking.</p>
+    <div>
+        <!--Square Ad-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--Square Ad-->
+    </div>
 
     <div id="linkdiv"><a href="https://t.me/coolsavings/83"><button id="linkbtn">Movie Link</button></a></div>
     <h2 id="waittext">Link Ready in... <span id="wts">30</span></h2>
 
-    <!--Square Ad-->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-        crossorigin="anonymous"></script>
-    <!-- display square -->
-    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696" data-ad-slot="7002523082"
-        data-ad-format="auto" data-full-width-responsive="true"></ins>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    <!--Square Ad-->
+    <div>
+        <!--Square Ad-->
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!--Square Ad-->
+    </div>
 
 </body>
 
