ad flex resolved

--- a/zzmyownsites/qalbmoviereview.html
+++ b/zzmyownsites/qalbmoviereview.html
@@ -8,7 +8,9 @@
         href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap"
         rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Qalb Movie Review</title>
 
     <style>
@@ -22,6 +24,8 @@
         body {
             background-color: #212327;
             color: white;
+            display: flex;
+            flex-direction: column;
 
             h1,
             h2 {
