--- a/zzmyownsites/qalbmoviereview.html
+++ b/zzmyownsites/qalbmoviereview.html
@@ -120,6 +120,8 @@
         }
 
         @media only screen and (min-width: 601px) {
+
+            /* Style for Desktops */
             * {
                 margin: 0;
                 padding: 0;
@@ -128,6 +130,7 @@
             }
 
             body {
+                padding: 0 10%;
                 background-color: #212327;
                 color: white;
                 display: flex;
@@ -135,14 +138,14 @@
 
                 h1,
                 h2 {
-                    margin-left: 5%;
+                    /* margin-left: 5%; */
                     align-self: start;
                 }
             }
 
             p {
-                margin: 0 5% 0 5%;
-                width: 90%;
+                /* margin: 0 5% 0 5%; */
+                width: 100%;
                 color: #ccc;
             }
 
