--- a/zzmyownsites/Jio.html
+++ b/zzmyownsites/Jio.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+    <!--Google Analytics-->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z3SQ5BR88Q"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-Z3SQ5BR88Q');
+    </script>
+    <!--Google Analytics-->
+    <script src="https://kit.fontawesome.com/cb00cca96c.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jio Free Recharge</title>
@@ -99,7 +111,7 @@
 
         #shareButton {
             max-width: 400px;
-            display: block;
+            display: none;
         }
     </style>
 </head>
@@ -123,40 +135,38 @@
         </div>
 
 
-        <div>
-            <!--Square Ad-->
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-                crossorigin="anonymous"></script>
-            <!-- display square -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
-                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <!--Square Ad-->
-        </div>
-
-        <!-- Recharge Now Button -->
-        <button onclick="startRecharge()" id="rechargeButton">Recharge Now</button>
-        <div>
-            <!--Square Ad-->
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-                crossorigin="anonymous"></script>
-            <!-- display square -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
-                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-            <!--Square Ad-->
-        </div>
-
-
-
         <!-- Scroll Down Text -->
         <div id="scrollText" class="scroll-text" style="display: none;">Scroll down for recharge</div>
+
+
+        <div>
+            <!--Square Ad-->
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <!--Square Ad-->
+        </div>
+
+        <div>
+            <!--Square Ad-->
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <!--Square Ad-->
+        </div>
+
 
         <!-- About Jio Section -->
         <div class="content">
@@ -279,8 +289,13 @@
             </script>
             <!--Square Ad-->
         </div>
+
+        <!-- Recharge Now Button -->
+        <button onclick="startRecharge()" id="rechargeButton">Recharge Now</button>
         <!-- WhatsApp Share Button -->
-        <button onclick="shareToWhatsApp()" id="shareButton">Share to 5 Members for Free Recharge</button>
+        <button onclick="shareToWhatsApp()" id="shareButton"><i class="fa-brands fa-whatsapp"></i> Share to 5
+            Members for
+            Free Recharge</button>
         <div>
             <!--Square Ad-->
             <script async
