--- a/zzmyownsites/vp.html
+++ b/zzmyownsites/vp.html
@@ -228,6 +228,8 @@
         }
     </style>
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+    crossorigin="anonymous"></script>
 
 <body>
 
