--- a/zzmyownsites/vp.html
+++ b/zzmyownsites/vp.html
@@ -22,7 +22,7 @@
 
             body {
                 height: 100vh;
-                background-image: linear-gradient(yellow, orange, orange, red);
+                background-image: linear-gradient(red, yellow, red);
 
             }
 
@@ -61,7 +61,7 @@
             #scrolldiv {
                 top: 0;
                 left: 0;
-                position: absolute;
+                position: fixed;
                 height: 100%;
                 width: 100%;
                 display: flex;
@@ -86,7 +86,7 @@
 
             #inputdiv {
                 width: 100%;
-                position: absolute;
+                position: fixed;
                 bottom: 20px;
                 display: flex;
                 flex-direction: column;
@@ -169,7 +169,7 @@
             #scrolldiv {
                 top: 0;
                 left: 0;
-                position: absolute;
+                position: fixed;
                 height: 100%;
                 width: 100%;
                 display: flex;
@@ -194,7 +194,7 @@
 
             #inputdiv {
                 width: 100%;
-                position: absolute;
+                position: fixed;
                 bottom: 20px;
                 display: flex;
                 flex-direction: column;
@@ -228,8 +228,6 @@
         }
     </style>
 </head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
-    crossorigin="anonymous"></script>
 
 <body>
 
@@ -239,11 +237,25 @@
 
     <div id="textdiv">
         <h2>వసంత పంచమి శుభాకాంక్షలు</h2>
+
         <p>మన కుటుంబానికి, స్నేహితులకు, శ్రేయోభిలాషులకు వసంత పంచమి శుభాకాంక్షలు! 💛
             శ్రీ సరస్వతీ దేవి ఆశీస్సులతో జ్ఞానం, విజయం, ఆరోగ్యం, ఆనందం నిండిన జీవితం కలగాలని కోరుకుంటూ మీ
             <strong><span id="name">మీ పేరు</span>.📖✨
         </p></strong>
     </div>
+    <!--Square Ad-->
+    <div>
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+            crossorigin="anonymous"></script>
+        <!-- display square -->
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+            data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+    <!--Square Ad-->
     <div id="scrolldiv">
         <div class="sd" id="sd1">
             <marquee behavior="scroll" direction="up">
