--- a/zzmyownsites/jpg.html
+++ b/zzmyownsites/jpg.html
@@ -118,7 +118,6 @@
     </header>
     <nav>
         <a href="#about">About</a>
-        <a href="#privacy-policy">Privacy Policy</a>
     </nav>
     <main>
 
@@ -127,6 +126,19 @@
         <br>
         <img id="imagePreview" alt="Image Preview">
         <br>
+        <div>
+            <!--Square Ad-->
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+            <!--Square Ad-->
+        </div>
         <button id="convertButton" style="display: none;" onclick="convertToPng()">Convert to PNG</button>
         <img id="outputImage" alt="Converted PNG Image">
         <div>
