--- a/zzmyownsites/jpg.html
+++ b/zzmyownsites/jpg.html
@@ -40,9 +40,9 @@
         main {
             flex-grow: 1;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            /* display: flex; */
+            /* flex-direction: column;
+            align-items: center; */
             /* Center the content horizontally */
         }
 
