--- a/zzmyownsites/tn.html
+++ b/zzmyownsites/tn.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Trending Topics Today: Indian Bride, Viral Wedding Invites, Budget 2025, BTS Controversy, Galaxy Gas, Banana Botox and more. Stay updated with the latest viral trends.">
+        content="Trending Topics Today: Stay updated with viral stories including Indian Bride, Wedding Invites, Budget 2025, BTS Controversy, Galaxy Gas, Banana Botox and more.">
     <meta name="keywords"
-        content="Trending Topics, Viral News, Indian Trends, Wedding Trends, Budget 2025, BTS Controversy, Galaxy Gas, Banana Botox, Roti Checker, Social Media Trends">
+        content="Trending Topics, Viral News, Indian Trends, Wedding Trends, Budget 2025, BTS Controversy, Galaxy Gas, Banana Botox, Social Media Trends, CC Free Images">
     <meta name="author" content="YourName">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trending Topics Today</title>
@@ -104,6 +104,40 @@
         .topic span.date {
             font-size: 0.9rem;
             color: #666;
+        }
+
+        .topic img {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+
+        .img-credit {
+            font-size: 0.8rem;
+            color: #555;
+            text-align: right;
+            margin-bottom: 15px;
+        }
+
+        /* About Section */
+        .about {
+            background: #e9f0f5;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 5px;
+        }
+
+        .about h2 {
+            font-size: 1.8rem;
+            color: #005fa3;
+            margin-bottom: 15px;
+        }
+
+        .about p {
+            margin-bottom: 15px;
+            font-size: 1rem;
+            text-align: justify;
         }
 
         /* Footer */
@@ -205,85 +239,137 @@
         <!-- Topic 1 -->
         <section class="topic" id="bride">
             <h2>Indian Bride Breaks Stereotypes</h2>
+            <img src="https://source.unsplash.com/featured/?wedding,bride" alt="Indian Bride" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
             <p>An inspiring story of a bride who defies traditional beauty norms by choosing to ditch her wig on her
-                wedding day. This bold move has sparked a nationwide discussion about authenticity and self-expression.
-            </p>
+                wedding day. Her bold decision has ignited conversations nationwide about authenticity, self-confidence,
+                and redefining conventional beauty standards.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 2 -->
         <section class="topic" id="wedding-invite">
             <h2>Kerala Wedding Invite Goes Viral</h2>
+            <img src="https://source.unsplash.com/featured/?wedding,invite" alt="Kerala Wedding Invite" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
             <p>A creative and unconventional wedding invitation designed like a ration card has taken social media by
-                storm. This innovative twist on tradition is drawing widespread attention and admiration.</p>
+                storm. This innovative twist on tradition is drawing widespread attention, sparking both admiration and
+                curiosity among viewers.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 3 -->
         <section class="topic" id="anganwadi">
             <h2>Anganwadi Biryani Request Sparks Debate</h2>
-            <p>A young boy from Kerala made headlines by requesting an Anganwadi to serve biryani and chicken fry
-                instead of the usual upma, igniting discussions on social media about tradition versus modern
-                expectations.</p>
+            <img src="https://source.unsplash.com/featured/?food,street" alt="Anganwadi Biryani" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>A young boy from Kerala has made headlines by requesting an Anganwadi to serve biryani and chicken fry
+                instead of the usual upma. This unexpected ask has ignited discussions across social media about modern
+                expectations meeting traditional services.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 4 -->
         <section class="topic" id="influencer">
             <h2>US Influencer Holds Funeral for Amputated Limb</h2>
-            <p>A controversial act by a US influencer staging a funeral for an amputated limb has raised eyebrows and
-                led to vigorous online debate about shock value and digital theatrics.</p>
+            <img src="https://source.unsplash.com/featured/?influencer,viral" alt="US Influencer" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>A controversial act by a US influencer, who staged a funeral for an amputated limb, has stirred strong
+                opinions online. This shocking stunt is being debated widely, as viewers question the motives behind
+                such extreme digital theatrics.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 5 -->
         <section class="topic" id="roti-checker">
             <h2>Roti Checker Trend Takes Over Social Media</h2>
-            <p>An AI-powered tool called "Roti-Checker" is now the talk of the town as home cooks and food enthusiasts
-                engage in a fun challenge to perfect the roundness of their rotis. This trend blends tradition with
-                modern technology.</p>
+            <img src="https://source.unsplash.com/featured/?food,cooking" alt="Roti Checker" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>An AI-powered tool known as "Roti-Checker" is now capturing the imagination of home cooks and food
+                enthusiasts. The challenge of perfecting the roundness of homemade rotis has become a fun, shareable
+                trend blending tradition with modern technology.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 6 -->
         <section class="topic" id="budget">
             <h2>Budget 2025 and Tax Meme Frenzy</h2>
-            <p>The announcement of no income tax on earnings up to Rs 12 lakh has triggered a meme explosion on social
-                media. Users across the nation are sharing their humorous takes on the Budget 2025 updates.</p>
+            <img src="https://source.unsplash.com/featured/?finance,budget" alt="Budget 2025" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>The recent announcement that no income tax will be levied on earnings up to Rs 12 lakh has ignited a wave
+                of humorous memes and online commentary. This fiscal update is prompting both excitement and playful
+                debate among social media users nationwide.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 7 -->
         <section class="topic" id="groom-dance">
             <h2>Delhi Groom’s Dance Mishap Goes Viral</h2>
-            <p>A video of a Delhi groom’s energetic dance to the hit song “Choli ke Peeche” has gone viral, sparking
-                laughter and debates about wedding traditions and modern celebrations.</p>
+            <img src="https://source.unsplash.com/featured/?dance,wedding" alt="Groom Dance" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>A viral video capturing a Delhi groom’s spirited dance to the hit song “Choli ke Peeche” has set social
+                media abuzz. The lighthearted clip is prompting both laughter and discussions about the merging of
+                traditional ceremonies with modern celebration styles.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 8 -->
         <section class="topic" id="bts">
             <h2>BTS Controversy: Global Fans Demand Apology</h2>
-            <p>After an Italian radio host disrespected BTS’ Jin and his music, fans worldwide have united to demand an
-                apology. The controversy is now trending on social media as discussions heat up.</p>
+            <img src="https://source.unsplash.com/featured/?music,concert" alt="BTS Controversy" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>After an Italian radio host made disrespectful remarks toward BTS’ Jin, passionate fans across the globe
+                are uniting to demand a formal apology. This controversy has now sparked widespread discussions about
+                respect, cultural sensitivity, and fan power in the digital age.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 9 -->
         <section class="topic" id="galaxy-gas">
             <h2>Galaxy Gas: Dangerous Trend Among Young People</h2>
-            <p>A risky trend where young people inhale nitrous oxide from cartridges—dubbed "Galaxy Gas"—is rapidly
-                spreading online. Health experts warn about the potential dangers of this practice.</p>
+            <img src="https://source.unsplash.com/featured/?youth,trend" alt="Galaxy Gas" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>A risky new trend has emerged among young people involving the inhalation of nitrous oxide cartridges,
+                colloquially known as "Galaxy Gas." Health experts have raised warnings about the potential dangers of
+                this practice, urging caution among impressionable users.</p>
             <span class="date">Published: February 4, 2025</span>
         </section>
 
         <!-- Topic 10 -->
         <section class="topic" id="banana-botox">
             <h2>Banana Botox: Viral Gen Z Skincare Hack Under Fire</h2>
-            <p>Gen Z enthusiasts have been promoting a skincare hack using banana peels as a natural remedy for
-                wrinkles. While the trend is gaining popularity, dermatologists caution that it may cause skin issues.
-            </p>
+            <img src="https://source.unsplash.com/featured/?skincare,banana" alt="Banana Botox" />
+            <div class="img-credit">Image courtesy of Unsplash</div>
+            <p>Gen Z trendsetters are buzzing about a viral skincare hack that involves using banana peels as a natural
+                remedy to reduce wrinkles. Despite its popularity on social media, dermatologists warn that the method
+                may lead to unforeseen skin issues.</p>
             <span class="date">Published: February 4, 2025</span>
+        </section>
+
+        <!-- About Section: More than 200 words -->
+        <section class="about" id="about">
+            <h2>About Trending Topics</h2>
+            <p>
+                In today’s digital age, trending topics have become a powerful reflection of the collective pulse of
+                society. They encompass the most talked-about stories, viral videos, and hot-button issues that capture
+                public attention at any given moment. From innovative wedding trends and quirky social media challenges
+                to controversial political events and breakthrough technological developments, trending topics provide a
+                snapshot of what matters most to people around the globe.
+            </p>
+            <p>
+                This website is dedicated to aggregating these captivating subjects and presenting them in a clean,
+                responsive, and user-friendly manner. We believe that by staying informed about trending topics,
+                individuals can gain valuable insights into cultural shifts, emerging social phenomena, and the evolving
+                nature of digital communication. Our curated content is designed to spark conversation, foster
+                curiosity, and encourage deeper engagement with the issues that shape our world.
+            </p>
+            <p>
+                By utilizing Creative Commons–free images from trusted sources such as Unsplash, we ensure that our
+                visual content is not only eye-catching but also legally compliant and free to use. Our commitment to
+                quality content and ethical media practices is reflected in every aspect of this website. Whether you
+                are here to catch up on the latest viral stories or to explore in-depth articles that provide context
+                and analysis, our goal is to deliver a platform that informs, entertains, and inspires.
+            </p>
         </section>
     </main>
 
