--- a/zzmyownsites/tn.html
+++ b/zzmyownsites/tn.html
@@ -10,6 +10,8 @@
     <meta name="author" content="YourName">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trending Topics Today</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+        crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <style>
         /* Reset and Base */
