--- a/zzmyownsites/tn.html
+++ b/zzmyownsites/tn.html
@@ -259,7 +259,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 2: Kerala Wedding Invite -->
         <section class="topic" id="wedding-invite">
             <h2>Kerala Wedding Invite Goes Viral</h2>
@@ -277,7 +289,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 3: Anganwadi Request -->
         <section class="topic" id="anganwadi">
             <h2>Anganwadi Biryani Request Sparks Debate</h2>
@@ -295,7 +319,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 4: US Influencer -->
         <section class="topic" id="influencer">
             <h2>US Influencer Holds Funeral for Amputated Limb</h2>
@@ -313,7 +349,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 5: Roti Checker -->
         <section class="topic" id="roti-checker">
             <h2>Roti Checker Trend Takes Over Social Media</h2>
@@ -331,7 +379,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 6: Budget 2025 -->
         <section class="topic" id="budget">
             <h2>Budget 2025 and Tax Meme Frenzy</h2>
@@ -349,7 +409,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 7: Delhi Groom’s Dance -->
         <section class="topic" id="groom-dance">
             <h2>Delhi Groom’s Dance Mishap Goes Viral</h2>
@@ -367,7 +439,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 8: BTS Controversy -->
         <section class="topic" id="bts">
             <h2>BTS Controversy: Global Fans Demand Apology</h2>
@@ -386,7 +470,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 9: Galaxy Gas -->
         <section class="topic" id="galaxy-gas">
             <h2>Galaxy Gas: Dangerous Trend Among Young People</h2>
@@ -404,7 +500,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- Topic 10: Banana Botox -->
         <section class="topic" id="banana-botox">
             <h2>Banana Botox: Viral Gen Z Skincare Hack Under Fire</h2>
@@ -422,7 +530,19 @@
             </p>
             <span class="date">Published: February 4, 2025</span>
         </section>
-
+        <!--Square Ad-->
+        <div>
+            <script async
+                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2648616140569696"
+                crossorigin="anonymous"></script>
+            <!-- display square -->
+            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2648616140569696"
+                data-ad-slot="7002523082" data-ad-format="auto" data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!--Square Ad-->
         <!-- About Section -->
         <section class="about" id="about">
             <h2>About Trending Topics</h2>
